muncher/programs/test-cases/error-5.mnc
let a = object A {
    ($a:expr, $a:expr) {}
};

a(1, 2);
